--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -5,10 +5,10 @@
   height: fit-content;
   background-position: center;
   background-size: cover;
+  min-width: fit-content;
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 
 .landing-page-redirect-container h1 {
@@ -16,6 +16,7 @@
   align-self: center;
   color: white;
   margin-bottom: 10%;
+  margin-top: 10%;
 }
 
 .landing-page-redirect-container button {
