--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -49,6 +49,42 @@
   padding: 4% 0;
 }
 
+.quantity-minus {
+  background-color: rgba(252, 59, 59, 1);
+  border: none;
+  border-radius: 5px;
+  width: 10%;
+  margin-right: 5%;
+}
+
+.quantity-minus h4 {
+  color: black;
+  font-weight: 800;
+}
+
+.quantity-minus:hover {
+  cursor: pointer;
+  background-color: rgb(197, 46, 46);
+}
+
+.quantity-plus {
+  background-color: rgba(92, 212, 73, 1);
+  border: none;
+  border-radius: 5px;
+  margin-left: 5%;
+  width: 10%;
+}
+
+.quantity-plus h4 {
+  color: black;
+  font-weight: 800;
+}
+
+.quantity-plus:hover {
+  cursor: pointer;
+  background-color: rgb(69, 165, 55);
+}
+
 .payment-container {
   width: 50%;
   display: flex;
