--- a/src/components/LandingPageQuotes.css
+++ b/src/components/LandingPageQuotes.css
@@ -12,7 +12,6 @@
 h4 {
   color: white;
   font-weight: 200;
-  line-height: 1%;
 }
 
 .quote-container {
@@ -36,5 +35,6 @@ h4 {
   }
   .landing-page-quotes-container h1 {
     font-size: 1.5em;
+    text-align: center;
   }
 }
