--- a/src/components/Shop.css
+++ b/src/components/Shop.css
@@ -34,6 +34,10 @@
   background-color: rgb(164, 92, 65);
   margin: 5% 0;
 }
+.item-card img {
+  height: 180px;
+  width: auto;
+}
 
 .addToCart-button {
   width: fit-content;
