--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -53,7 +53,7 @@
   background-color: rgba(252, 59, 59, 1);
   border: none;
   border-radius: 5px;
-  width: 10%;
+  width: 15%;
   margin-right: 5%;
 }
 
@@ -72,7 +72,7 @@
   border: none;
   border-radius: 5px;
   margin-left: 5%;
-  width: 10%;
+  width: 15%;
 }
 
 .quantity-plus h4 {
@@ -83,6 +83,10 @@
 .quantity-plus:hover {
   cursor: pointer;
   background-color: rgb(69, 165, 55);
+}
+
+.item-container img {
+  height: 150px;
 }
 
 .payment-container {
