--- a/src/components/Shop.css
+++ b/src/components/Shop.css
@@ -65,7 +65,7 @@
   background-color: rgba(252, 59, 59, 1);
   border: none;
   border-radius: 5px;
-  width: 10%;
+  width: 15%;
   margin-right: 5%;
 }
 .minus-button h4 {
@@ -83,7 +83,7 @@
   border: none;
   border-radius: 5px;
   margin-left: 5%;
-  width: 10%;
+  width: 15%;
 }
 .plus-button h4 {
   color: black;
@@ -93,6 +93,10 @@
 .plus-button:hover {
   cursor: pointer;
   background-color: rgb(69, 165, 55);
+}
+
+.item-price {
+  text-align: center;
 }
 
 @media screen and (max-width: 800px) {
