--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -87,6 +87,14 @@
 
 .item-container img {
   height: 150px;
+  min-width: 150px;
+}
+
+.key-value-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .payment-container {
